# rebuildCCL

./: .clangd  CMakeLists.txt  Makefile  alltoall_benchmark  kernel_alltoall  kernel_alltoall.cu  kernel_alltoall_optimized  kernel_alltoall_optimized.cu  native  native.cu  nccl_alltoall  nccl_alltoall.cu  p2p_alltoall  p2p_alltoall.cu
bootstrap/: Makefile  Makefile.benchmark  README.md  benchmark_makefile  bootstrap_benchmark  bootstrap_benchmark.cc  bootstrap_demo.cc  hierarchical_bootstrap.hpp  minimal_bootstrap.md  plot_benchmark.py  seastar_bootstrap.hpp  simplified_bootstrap.md
bootstrap/seastar_bootstrap/: CMakeLists.txt  PERFORMANCE_COMPARISON.md  README.md  RESULTS.md  bootstrap_benchmark.cc  build.sh  fast_bootstrap.cc  fast_bootstrap.h  visualize_results.py  visualize_results_en.py
demo/: basic.cpp  bootstrap.cpp  intranode.cu
kernel/: README.md  alltoall_analysis.md  detailed_visualization.py  generate_sample_data.py  sample_allreduce_data.csv  sample_alltoall_data.csv
scripts/: tcp.sh
